--- a/composer.json
+++ b/composer.json
@@ -35,38 +35,52 @@
             ]
         }
     },
-    "require-dev": {
-        "newfold-labs/wp-php-standards": "^1.2",
-        "roave/security-advisories": "dev-latest",
-        "wp-cli/i18n-command": "^2.5",
-        "wp-phpunit/wp-phpunit": "^6.4.2"
-    },
     "scripts": {
         "fix": "vendor/bin/phpcbf --standard=phpcs.xml .",
         "lint": "vendor/bin/phpcs --standard=phpcs.xml -s .",
+        "i18n-pot": "vendor/bin/wp i18n make-pot . ./languages/wp-plugin-crazy-domains.pot --headers='{\"Report-Msgid-Bugs-To\":\"https://github.com/newfold-labs/wp-plugin-crazy-domains/issues\",\"POT-Creation-Date\":\"2023-01-11T20:21:44+00:00\"}' --exclude=assets,tests,src",
+        "i18n-po": "vendor/bin/wp i18n update-po ./languages/wp-plugin-crazy-domains.pot ./languages",
+        "i18n-mo": "vendor/bin/wp i18n make-mo ./languages",
+        "i18n-json": "rm languages/*.json && vendor/bin/wp i18n make-json ./languages --no-purge --pretty-print",
         "i18n": [
-            "vendor/bin/wp i18n make-pot . ./languages/wp-plugin-web.pot --headers=Report-Msgid-Bugs-To:https://github.com/newfold-labs/wp-plugin-web/issues --exclude=assets,storybook,tests",
-            "vendor/bin/wp i18n make-pot . ./languages/wp-plugin-web.pot --headers=POT-Creation-Date:null --exclude=assets,storybook,tests"
+            "@i18n-pot",
+            "@i18n-po",
+            "@i18n-mo",
+            "@i18n-json"
         ]
     },
     "scripts-descriptions": {
         "fix": "Automatically fix coding standards issues where possible.",
         "lint": "Check files against coding standards.",
-        "i18n": "Generate a .pot file for translation."
+        "i18n": "Generate new language files.",
+        "i18n-pot": "Generate a .pot file for translation.",
+        "i18n-po": "Update existing .po files.",
+        "i18n-mo": "Generate new language .mo files.",
+        "i18n-json": "Generate new language .json files."
     },
     "require": {
         "doctrine/inflector": "1.2.0 as 1.3.1",
-        "newfold-labs/wp-module-coming-soon": "^1.1.12",
-        "newfold-labs/wp-module-data": "^2.4.14",
-        "newfold-labs/wp-module-deactivation": "^1.0.3",
+        "newfold-labs/wp-module-activation": "^1.0.2",
+        "newfold-labs/wp-module-atomic": "^1.3",
+        "newfold-labs/wp-module-coming-soon": "^1.2.5",
+        "newfold-labs/wp-module-context": "^1.0.1",
+        "newfold-labs/wp-module-data": "^2.5.3",
+        "newfold-labs/wp-module-deactivation": "^1.2.1",
+        "newfold-labs/wp-module-features": "^1.4.2",
         "newfold-labs/wp-module-loader": "^1.0.10",
-        "newfold-labs/wp-module-marketplace": "^2.1.0",
-        "newfold-labs/wp-module-notifications": "^1.2.1",
-        "newfold-labs/wp-module-performance": "^1.2.2",
-        "newfold-labs/wp-module-runtime": "^1.0.7",
-        "newfold-labs/wp-module-secure-passwords": "^1.1",
-        "newfold-labs/wp-module-sso": "^1.0.4",
-        "wp-forge/wp-update-handler": "^1.0",
+        "newfold-labs/wp-module-marketplace": "^2.3.1",
+        "newfold-labs/wp-module-notifications": "^1.3.0",
+        "newfold-labs/wp-module-performance": "^2.0.0",
+        "newfold-labs/wp-module-runtime": "^1.0.11",
+        "newfold-labs/wp-module-secure-passwords": "^1.1.1",
+        "newfold-labs/wp-module-sso": "^1.0.5",
+        "wp-forge/wp-update-handler": "^1.0.2",
         "wp-forge/wp-upgrade-handler": "^1.0"
+    },
+    "require-dev": {
+        "newfold-labs/wp-php-standards": "^1.2.3",
+        "roave/security-advisories": "dev-latest",
+        "wp-cli/i18n-command": "^2.6.1",
+        "wp-phpunit/wp-phpunit": "^6.5.4"
     }
 }
