--- a/.github/workflows/wp-i18n.yml
+++ b/.github/workflows/wp-i18n.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           php-version: '8.1'
           coverage: none
-          tools: composer
+          tools: composer, cs2pr
 
       - name: Get Composer cache directory
         id: composer-cache
@@ -64,16 +64,35 @@ jobs:
       - name: Install PHP Dependencies
         run: composer install --no-progress --optimize-autoloader
 
+      - name: Setup Registry
+        run: printf "\n//npm.pkg.github.com/:_authToken=${{ secrets.NEWFOLD_ACCESS_TOKEN }}" >> .npmrc
+
+      - name: NPM Install
+        run: npm install --legacy-peer-deps
+
+      - name: Build JavaScript
+        run: npm run build
+
+      - name: Remove token
+        run: git checkout -- '.npmrc'
+
+
       - name: Add text domains
         run: npx node-wp-i18n addtextdomain
 
-      - name: Generate POT file
-        run: vendor/bin/wp i18n make-pot . ./languages/${{ github.event.repository.name }}.pot --headers='{"Report-Msgid-Bugs-To":"https://github.com/${{ github.repository }}/issues","POT-Creation-Date":null}' --exclude=assets,storybook,tests
+      - name: Generate language files
+        run: composer run-script i18n
 
       - name: Check if there are file changes
         id: changes
         continue-on-error: true
         run: git diff --exit-code
+
+      - name: Warning if language files have changes
+        if: steps.changes.outcome == 'failure'
+        run: |
+          echo "i18n files are out of date"
+          echo "Please run command (composer run i18n) locally to update them and commit before releasing"
 
       - name: Commit web files
         if: steps.changes.outcome == 'failure'
@@ -82,7 +101,7 @@ jobs:
           git config --local user.email "${{ github.event.head_commit.author.email }}"
           git remote -v
           git add -A
-          git commit -m "WordPress I18N triggered by commit ${{ github.sha }}"
+          git commit -m "WordPress i18n triggered by commit ${{ github.sha }}"
           git status
 
       - name: Push changes
