--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         "newfold-labs/wp-module-runtime": "^1.0.11",
         "newfold-labs/wp-module-secure-passwords": "^1.1.1",
         "newfold-labs/wp-module-sso": "^1.0.6",
+        "wp-cli/wp-cli": "^2.11",
         "wp-forge/wp-update-handler": "^1.0.2",
         "wp-forge/wp-upgrade-handler": "^1.0"
     },
