--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
         "@tailwindcss/forms": "^0.5.7",
         "@testing-library/cypress": "^10.0.2",
         "@wordpress/env": "^10.8.0",
-        "@wordpress/scripts": "^27.9.0",
+        "@wordpress/scripts": "^30.4.0",
         "axe-core": "^4.10.0",
         "cypress": "^13.15.0",
         "cypress-axe": "^1.5.0",
+        "node-fetch": "^2.7.0",
         "tailwindcss": "^3.4.13",
         "yaml-lint": "^1.7.0"
     },
