--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@wordpress/icons": "^10.12.0",
         "ajv": "^8.17.1",
         "classnames": "^2.5.1",
+        "html-react-parser": "^5.1.18",
         "jquery": "^3.7.1",
         "lodash": "^4.17.21",
         "react": "^18.3.1",
