--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
         "newfold-labs/wp-module-loader": "^1.0.12",
         "newfold-labs/wp-module-marketplace": "^2.5.0",
         "newfold-labs/wp-module-notifications": "^1.6.8",
-        "newfold-labs/wp-module-performance": "^3.5.3",
+        "newfold-labs/wp-module-performance": "2.7.10",
         "newfold-labs/wp-module-runtime": "^1.1.3",
         "newfold-labs/wp-module-secure-passwords": "^1.1.1",
         "newfold-labs/wp-module-sso": "^1.0.8",
