--- a/composer.json
+++ b/composer.json
@@ -60,27 +60,27 @@
     },
     "require": {
         "doctrine/inflector": "1.2.0 as 1.3.1",
-        "newfold-labs/wp-module-activation": "^1.0.6",
+        "newfold-labs/wp-module-activation": "^1.0.11",
         "newfold-labs/wp-module-atomic": "^1.3",
-        "newfold-labs/wp-module-coming-soon": "^1.5.0",
-        "newfold-labs/wp-module-context": "^1.0.1",
-        "newfold-labs/wp-module-data": "^2.6.10",
-        "newfold-labs/wp-module-deactivation": "^1.3.0",
-        "newfold-labs/wp-module-features": "^1.4.2",
-        "newfold-labs/wp-module-link-tracker": "^1.1",
-        "newfold-labs/wp-module-loader": "^1.0.12",
-        "newfold-labs/wp-module-marketplace": "^2.5.0",
-        "newfold-labs/wp-module-notifications": "^1.6.8",
+        "newfold-labs/wp-module-coming-soon": "^1.6.3",
+        "newfold-labs/wp-module-context": "^1.0.2",
+        "newfold-labs/wp-module-data": "2.8.8",
+        "newfold-labs/wp-module-deactivation": "1.5.2",
+        "newfold-labs/wp-module-features": "1.5.1",
+        "newfold-labs/wp-module-link-tracker": "1.1.4",
+        "newfold-labs/wp-module-loader": "^1.0.13",
+        "newfold-labs/wp-module-marketplace": "2.6.3",
+        "newfold-labs/wp-module-notifications": "^1.7.0",
         "newfold-labs/wp-module-performance": "2.7.10",
         "newfold-labs/wp-module-runtime": "^1.1.3",
-        "newfold-labs/wp-module-secure-passwords": "^1.1.1",
-        "newfold-labs/wp-module-sso": "^1.0.8",
+        "newfold-labs/wp-module-secure-passwords": "^1.1.2",
+        "newfold-labs/wp-module-sso": "^1.2.0",
         "wp-cli/wp-cli": "^2.11",
         "wp-forge/wp-update-handler": "^1.0.2",
         "wp-forge/wp-upgrade-handler": "^1.0"
     },
     "require-dev": {
-        "newfold-labs/wp-php-standards": "^1.2.4",
+        "newfold-labs/wp-php-standards": "^1.2.5",
         "roave/security-advisories": "dev-latest",
         "wp-cli/i18n-command": "^2.6.3",
         "wp-phpunit/wp-phpunit": "^6.7.2"
