--- a/composer.json
+++ b/composer.json
@@ -66,12 +66,13 @@
         "newfold-labs/wp-module-context": "^1.0.2",
         "newfold-labs/wp-module-data": "2.8.8",
         "newfold-labs/wp-module-deactivation": "1.5.2",
+        "newfold-labs/wp-module-ecommerce": "^1.10",
         "newfold-labs/wp-module-features": "1.5.1",
         "newfold-labs/wp-module-link-tracker": "1.1.4",
         "newfold-labs/wp-module-loader": "^1.0.13",
         "newfold-labs/wp-module-marketplace": "2.6.3",
         "newfold-labs/wp-module-notifications": "^1.7.0",
-        "newfold-labs/wp-module-performance": "2.7.10",
+        "newfold-labs/wp-module-performance": "3.3.0",
         "newfold-labs/wp-module-runtime": "^1.1.3",
         "newfold-labs/wp-module-secure-passwords": "^1.1.2",
         "newfold-labs/wp-module-sso": "^1.2.0",
