--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "yaml-lint": "^1.7.0"
     },
     "scripts": {
-        "build": "wp-scripts build",
+        "build": "NODE_ENV=production wp-scripts build",
         "check-engines": "wp-scripts check-engines",
         "check-licenses": "wp-scripts check-licenses --production",
         "create:dist": "rsync -r --exclude-from=.distignore . ./wp-plugin-web",
