--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
         "newfold-labs/wp-module-data": "2.9.0",
         "newfold-labs/wp-module-deactivation": "1.5.2",
         "newfold-labs/wp-module-features": "1.5.1",
+        "newfold-labs/wp-module-installer": "^1.7.1",
         "newfold-labs/wp-module-link-tracker": "1.1.4",
         "newfold-labs/wp-module-loader": "^1.0.13",
         "newfold-labs/wp-module-marketplace": "^3.1.2",
